# 02-trab-lista-itineraria

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: lista.h
src/: lista.cpp
tests/: test.cpp
